--- a/travis.yml
+++ b/travis.yml
@@ -5,7 +5,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t stephengrider/docker-react -f Dockerfile.dev .
+  - docker build -t arif11111/docker-react -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true arif11111/docker-react npm run test
