--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,18 @@ services:
   - docker
 
 before_install:
-  - docker build -t stephengrider/docker-react -f Dockerfile.dev .
+  - docker build -t arif11111/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true stephengrider/docker-react npm run test
+  - docker run -e CI=true arif11111/docker-react npm run test
 
 deploy:
   provider: elasticbeanstalk
   region: 'us-east-1'
-  app: 'docker'
-  env: 'docker-env'
-  bucket_name: 'elasticbeanstalk-us-east-1-923445559289'
-  bucket_path: 'docker'
+  app: 'dockerreact'
+  env: 'dockerreact-env'
+  bucket_name: 'elasticbeanstalk-us-east-1-339268732047'
+  bucket_path: 'dockerreact'
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
